@@ -1,3 +1,11 @@
+2009-12-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/reloc2.sh: Don't assume textrel works if getenforce
+	exists, but doesn't print Permissive or Disabled.
+	* testsuite/reloc8.sh: Likewise.
+	* testsuite/reloc9.sh: Likewise.
+	* testsuite/tls3.sh: Likewise.
+
 2009-11-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* src/arch-x86_64.c (x86_64_reloc_size): Handle R_X86_64_IRELATIVE.
